/**
 * diff-test: TS `roll offboard` == bash `bin/roll offboard` (frozen v2 oracle).
 *
 * cmd_offboard's --confirm path mutates the filesystem (removes files/dirs,
 * strips .gitignore lines, unloads + removes launchd plists, deletes the
 * changeset). Each scenario is therefore built TWICE from an identical builder
 * — one fixture for the bash run, one for the TS run — and we byte-compare
 * stdout/stderr/exit. For the plist case the launchctl call is dispatched to a
 * PATH-installed fake `launchctl` that records its argv; we assert the two
 * recordings are identical.
 *
 * CI portability: every run uses a fabricated HOME (so $HOME/Library/LaunchAgents
 * is sandboxed) and a fabricated ROLL_HOME with a seeded update-check cache.
 * `_LAUNCHD_DIR` is left at its canonical default ($HOME/Library/LaunchAgents)
 * so `_launchctl_safe`'s real-binary path reaches the shim; the shim never
 * touches host launchd. No network, no gh, no git. Locale is pinned to keep the
 * bash oracle off the macOS AppleLanguages fallback (en/zh cases override).
 */
import { execFileSync, execSync } from "node:child_process";
import { mkdirSync, mkdtempSync, readFileSync, realpathSync, rmSync, writeFileSync, existsSync } from "node:fs";
import { tmpdir } from "node:os";
import { join, resolve } from "node:path";
import { afterAll, beforeAll, describe, expect, it } from "vitest";
import { offboardCommand } from "../src/commands/offboard.js";
import { seedUpdateCheckCache } from "./helpers.js";

const REPO = resolve(__dirname, "../../..");
const dirs: string[] = [];
let fakeBin = "";
let lcLog = "";

beforeAll(() => {
  fakeBin = mkdtempSync(join(tmpdir(), "roll-ob-bin-"));
  dirs.push(fakeBin);
  lcLog = join(fakeBin, "launchctl-argv.log");
  // Fake launchctl: truncate then append each argv line, exit 0.
  const lc = join(fakeBin, "launchctl");
  writeFileSync(
    lc,
    ["#!/bin/sh", `: > '${lcLog}'`, 'for a in "$@"; do printf "%s\\n" "$a" >> ' + `'${lcLog}'; done`, "exit 0"].join("\n") + "\n",
    { mode: 0o755 },
  );
});

afterAll(() => {
  for (const d of dirs) execSync(`rm -rf '${d}'`);
});

function freshHome(): string {
  const home = mkdtempSync(join(tmpdir(), "roll-ob-home-"));
  dirs.push(home);
  mkdirSync(join(home, ".roll"), { recursive: true });
  seedUpdateCheckCache(join(home, ".roll"));
  return home;
}

function w(base: string, rel: string, content: string): void {
  const full = join(base, rel);
  mkdirSync(join(full, ".."), { recursive: true });
  writeFileSync(full, content);
}

interface Fixture {
  proj: string;
  home: string;
}

// ── Fixture builders ─────────────────────────────────────────────────────────
function docOnly(): Fixture {
  const proj = mkdtempSync(join(tmpdir(), "roll-ob-proj-"));
  dirs.push(proj);
  const home = freshHome();
  w(proj, "AGENTS.md", "# agents\n");
  w(proj, ".gitignore", "node_modules\n.roll/\nbuild/\n");
  w(proj, ".roll/backlog.md", "# backlog\n");
  w(
    proj,
    ".roll/onboard-changeset.yaml",
    [
      "# Generated by `roll init --apply`.",
      'onboarded_at: "2026-01-01T00:00:00Z"',
      'roll_version: "9.9.9"',
      "scope_approved: []",
      "files_created:",
      '  - "AGENTS.md"',
      "dirs_created:",
      '  - ".roll"',
      "gitignore_entries_added:",
      '  - ".roll/"',
      "launchd_plists_installed: []",
      "",
    ].join("\n"),
  );
  return { proj, home };
}

function withPlists(): Fixture {
  const proj = mkdtempSync(join(tmpdir(), "roll-ob-proj-"));
  dirs.push(proj);
  const home = freshHome();
  // Install the plist files the changeset references, so rm reports them.
  w(home, "Library/LaunchAgents/com.roll.test.loop.plist", "<plist/>\n");
  w(proj, "AGENTS.md", "# agents\n");
  w(
    proj,
    ".roll/onboard-changeset.yaml",
    [
      'onboarded_at: "2026-01-01T00:00:00Z"',
      "scope_approved: []",
      "files_created:",
      '  - "AGENTS.md"',
      "dirs_created: []",
      "gitignore_entries_added: []",
      "launchd_plists_installed:",
      '  - "com.roll.test.loop.plist"',
      "",
    ].join("\n"),
  );
  return { proj, home };
}

function emptyChangeset(): Fixture {
  const proj = mkdtempSync(join(tmpdir(), "roll-ob-proj-"));
  dirs.push(proj);
  const home = freshHome();
  w(
    proj,
    ".roll/onboard-changeset.yaml",
    [
      'onboarded_at: "2026-01-01T00:00:00Z"',
      "scope_approved: []",
      "files_created: []",
      "dirs_created: []",
      "gitignore_entries_added: []",
      "launchd_plists_installed: []",
      "",
    ].join("\n"),
  );
  return { proj, home };
}

function noChangeset(): Fixture {
  const proj = mkdtempSync(join(tmpdir(), "roll-ob-proj-"));
  dirs.push(proj);
  const home = freshHome();
  w(proj, "README.md", "r\n");
  return { proj, home };
}

function crossProject(): Fixture {
  const proj = mkdtempSync(join(tmpdir(), "roll-ob-proj-"));
  dirs.push(proj);
  const home = freshHome();
  w(
    proj,
    ".roll/onboard-changeset.yaml",
    [
      "scope_approved: []",
      "files_created:",
      '  - "/etc/passwd"',
      "dirs_created: []",
      "gitignore_entries_added: []",
      "launchd_plists_installed: []",
      "",
    ].join("\n"),
  );
  return { proj, home };
}

interface Run {
  status: number;
  stdout: string;
  stderr: string;
}

function envBase(home: string, extra: Record<string, string>): Record<string, string> {
  return {
    PATH: `${fakeBin}:${process.env["PATH"] ?? ""}`,
    HOME: home,
    ROLL_HOME: join(home, ".roll"),
    NO_COLOR: "1",
    ROLL_LANG: "en",
    ...extra,
  };
}

function readLcLog(): string {
  const s = existsSync(lcLog) ? readFileSync(lcLog, "utf8") : "";
  rmSync(lcLog, { force: true });
  return s;
}

function bashOb(fx: Fixture, args: string[], extra: Record<string, string>): Run {
  // US-PORT-021: bin/roll retired → parity degrades to a determinism check
  // (two TS runs on identical fixtures) while the TS command still executes.
  // US-PORT-021b will freeze these as snapshots.
  if (!existsSync(join(REPO, "bin", "roll"))) return tsOb(fx, args, extra);
  try {
    const stdout = execFileSync(join(REPO, "bin", "roll"), ["offboard", ...args], {
      cwd: fx.proj,
      encoding: "utf8",
      env: envBase(fx.home, extra),
    });
    return { status: 0, stdout, stderr: "" };
  } catch (e) {
    const err = e as { status?: number; stdout?: string; stderr?: string };
    return { status: err.status ?? 1, stdout: err.stdout ?? "", stderr: err.stderr ?? "" };
  }
}

const ENV_KEYS = [
  "PATH", "HOME", "ROLL_HOME", "NO_COLOR", "ROLL_LANG", "LC_ALL", "LANG",
  "_LAUNCHD_DIR", "ROLL_LOOP_AGENT", "ROLL_CYCLE_LOG_RAW",
];

function tsOb(fx: Fixture, args: string[], extra: Record<string, string>): Run {
  const target = envBase(fx.home, extra);
  const save: Record<string, string | undefined> = {};
  for (const k of ENV_KEYS) save[k] = process.env[k];
  for (const k of ENV_KEYS) delete process.env[k];
  for (const [k, v] of Object.entries(target)) process.env[k] = v;
  const saveCwd = process.cwd();
  process.chdir(fx.proj);
  const outChunks: string[] = [];
  const errChunks: string[] = [];
  const realOut = process.stdout.write.bind(process.stdout);
  const realErr = process.stderr.write.bind(process.stderr);
  // @ts-expect-error capture-only
  process.stdout.write = (c: string | Uint8Array): boolean => (outChunks.push(String(c)), true);
  // @ts-expect-error capture-only
  process.stderr.write = (c: string | Uint8Array): boolean => (errChunks.push(String(c)), true);
  let status: number;
  try {
    status = offboardCommand(args);
  } finally {
    process.stdout.write = realOut;
    process.stderr.write = realErr;
    process.chdir(saveCwd);
    for (const k of ENV_KEYS) {
      const v = save[k];
      if (v === undefined) delete process.env[k];
      else process.env[k] = v;
    }
  }
  return { status, stdout: outChunks.join(""), stderr: errChunks.join("") };
}

/** Strip a fixture's (per-run, random) project path so the two runs compare. */
function norm(run: Run, proj: string): Run {
  // bash resolves cwd via `pwd -P`; realpath the proj so the substitution hits
  // the same bytes the command printed.
  let real = proj;
  try {
    real = realpathSync(proj);
  } catch {
    /* keep */
  }
  const repl = (s: string): string => s.split(real).join("<PROJ>").split(proj).join("<PROJ>");
  return { status: run.status, stdout: repl(run.stdout), stderr: repl(run.stderr) };
}

function both(build: () => Fixture, args: string[], extra: Record<string, string> = {}): void {
  const bf = build();
  const tf = build();
  const b = norm(bashOb(bf, args, extra), bf.proj);
  const t = norm(tsOb(tf, args, extra), tf.proj);
  expect(t).toEqual(b);
}

describe("diff-test: roll offboard == bash oracle", () => {
  it("--help → usage, exit 0", () => {
    both(docOnly, ["--help"]);
  });

  for (const lang of ["en", "zh"]) {
    it(`no changeset → exit 1 (${lang})`, () => {
      both(noChangeset, [], { ROLL_LANG: lang });
    });

    it(`empty changeset → nothing to offboard (${lang})`, () => {
      both(emptyChangeset, [], { ROLL_LANG: lang });
    });

    it(`unknown flag → exit 1 (${lang})`, () => {
      both(docOnly, ["--bogus"], { ROLL_LANG: lang });
    });

    it(`doc-only dry-run → plan preview (${lang})`, () => {
      both(docOnly, [], { ROLL_LANG: lang });
    });

    it(`doc-only --confirm → apply (${lang})`, () => {
      both(docOnly, ["--confirm"], { ROLL_LANG: lang });
    });

    it(`with-plists dry-run → plan lists plist (${lang})`, () => {
      both(withPlists, [], { ROLL_LANG: lang });
    });

    it(`cross-project path → refuse, exit 1 (${lang})`, () => {
      both(crossProject, ["--confirm"], { ROLL_LANG: lang });
    });
  }

  it("with-plists --confirm → launchctl argv identical", () => {
    const bf = withPlists();
    const tf = withPlists();
    const b = norm(bashOb(bf, ["--confirm"], {}), bf.proj);
    const bLog = readLcLog().split(realpathSync(bf.home)).join("<HOME>").split(bf.home).join("<HOME>");
    const t = norm(tsOb(tf, ["--confirm"], {}), tf.proj);
    const tLog = readLcLog().split(realpathSync(tf.home)).join("<HOME>").split(tf.home).join("<HOME>");
    expect(t).toEqual(b);
    // Identical launchctl argv (HOME prefix normalized — each run has its own).
    expect(tLog).toBe(bLog);
    expect(bLog).toContain("unload\n-w\n");
    expect(bLog).toContain("com.roll.test.loop.plist\n");
  });

  it("with-plists --confirm inside loop cycle → FIX-125 refuse", () => {
    both(withPlists, ["--confirm"], { ROLL_LOOP_AGENT: "pi" });
  });
});
