// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff-test: roll offboard == bash oracle > --help → usage, exit 0 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "Usage: roll offboard [--confirm]
  Preview (default) or apply (--confirm) the removal of every
  artefact recorded in .roll/onboard-changeset.yaml.
",
}
`;

exports[`diff-test: roll offboard == bash oracle > cross-project path → refuse, exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Refusing to act on '/etc/passwd' — it does not resolve under <PROJ>
[roll] [EN:拒绝处理 '/etc/passwd' — 路径不在当前项目下，可能是误用...]
  This usually means the changeset was copied from another project.
  Remove .roll/onboard-changeset.yaml manually, or rerun in the right dir.
",
  "stdout": "",
}
`;

exports[`diff-test: roll offboard == bash oracle > cross-project path → refuse, exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Refusing to act on '/etc/passwd' — it does not resolve under <PROJ>
[roll] 拒绝处理 '/etc/passwd' — 路径不在当前项目下，可能是误用
  This usually means the changeset was copied from another project.
  Remove .roll/onboard-changeset.yaml manually, or rerun in the right dir.
",
  "stdout": "",
}
`;

exports[`diff-test: roll offboard == bash oracle > doc-only --confirm → apply (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  Directories to remove:
    rmdir/r .roll

  .gitignore entries to remove:
    -    .roll/

  Applying offboard...
    removed file AGENTS.md
    removed dir  .roll
    .gitignore -   .roll/
[roll] Offboard complete.  Offboard
",
}
`;

exports[`diff-test: roll offboard == bash oracle > doc-only --confirm → apply (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  Directories to remove:
    rmdir/r .roll

  .gitignore entries to remove:
    -    .roll/

执行 offboard...
    removed file AGENTS.md
    removed dir  .roll
    .gitignore -   .roll/
[roll] 完成。
",
}
`;

exports[`diff-test: roll offboard == bash oracle > doc-only dry-run → plan preview (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  Directories to remove:
    rmdir/r .roll

  .gitignore entries to remove:
    -    .roll/

  This is a dry-run. Re-run with --confirm to apply.
Above is a dry-run preview. Add --confirm to execute.
",
}
`;

exports[`diff-test: roll offboard == bash oracle > doc-only dry-run → plan preview (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  Directories to remove:
    rmdir/r .roll

  .gitignore entries to remove:
    -    .roll/

  This is a dry-run. Re-run with --confirm to apply.
  以上为预演结果。加 --confirm 后才会真正执行。
",
}
`;

exports[`diff-test: roll offboard == bash oracle > empty changeset → nothing to offboard (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

[roll] Changeset is empty — nothing to offboard.
[roll] Change list is empty, nothing to offboard.
",
}
`;

exports[`diff-test: roll offboard == bash oracle > empty changeset → nothing to offboard (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

[roll] Changeset is empty — nothing to offboard.
[roll] 变更清单为空，无需 offboard。
",
}
`;

exports[`diff-test: roll offboard == bash oracle > no changeset → exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] No onboard changeset found at .roll/onboard-changeset.yaml
[roll] 未找到 onboard 变更清单 .roll/onboard-changeset.yaml

  Manual offboard — remove these by hand if they came from Roll:
    rm -rf .roll/                  # all process artefacts
    rm -f AGENTS.md CLAUDE.md      # only if they were generated by roll init
    Edit .gitignore to remove any '.roll/' entry
",
  "stdout": "",
}
`;

exports[`diff-test: roll offboard == bash oracle > no changeset → exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] No onboard changeset found at .roll/onboard-changeset.yaml
[roll] 未找到 onboard 变更清单 .roll/onboard-changeset.yaml

  手动清理——如果这些文件来自 Roll，请手动删除:
    rm -rf .roll/                  # 所有过程文件
    rm -f AGENTS.md CLAUDE.md      # 仅当这些文件由 roll init 生成
    编辑 .gitignore 移除 '.roll/' 条目
",
  "stdout": "",
}
`;

exports[`diff-test: roll offboard == bash oracle > unknown flag → exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unknown flag: --bogus
",
  "stdout": "",
}
`;

exports[`diff-test: roll offboard == bash oracle > unknown flag → exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] 未知参数
",
  "stdout": "",
}
`;

exports[`diff-test: roll offboard == bash oracle > with-plists --confirm inside loop cycle → FIX-125 refuse 1`] = `
{
  "status": 1,
  "stderr": "[roll] Refusing to unload launchd plists from inside a loop cycle (FIX-125).
  Run 'roll offboard --confirm' from a terminal outside the cycle,
  or pause the loop first: 'roll loop pause'.
",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  launchd plists to unload:
    unload com.roll.test.loop.plist

",
}
`;

exports[`diff-test: roll offboard == bash oracle > with-plists --confirm → launchctl argv identical 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  launchd plists to unload:
    unload com.roll.test.loop.plist

  Applying offboard...
    removed file AGENTS.md
    unloaded     com.roll.test.loop.plist
[roll] Offboard complete.  Offboard
",
}
`;

exports[`diff-test: roll offboard == bash oracle > with-plists --confirm → launchctl argv identical 2`] = `
"unload
-w
<HOME>/Library/LaunchAgents/com.roll.test.loop.plist
"
`;

exports[`diff-test: roll offboard == bash oracle > with-plists dry-run → plan lists plist (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  launchd plists to unload:
    unload com.roll.test.loop.plist

  This is a dry-run. Re-run with --confirm to apply.
Above is a dry-run preview. Add --confirm to execute.
",
}
`;

exports[`diff-test: roll offboard == bash oracle > with-plists dry-run → plan lists plist (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "
  Offboard plan for <PROJ>

  Files to remove:
    rm   AGENTS.md

  launchd plists to unload:
    unload com.roll.test.loop.plist

  This is a dry-run. Re-run with --confirm to apply.
  以上为预演结果。加 --confirm 后才会真正执行。
",
}
`;
